--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -1,20 +1,16 @@
 {% extends 'base.html' %}
-
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">[O]verview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">[O]verview</a>
         <span class="separator">|</span>
         <span class="upper-left">Main Setup</span>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for('save_to_file') }}">[S]ave to File</a>
+        <a class="upper-left" href="{{ url_for("save_to_file") }}">[S]ave to File</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for('load_from_file') }}">[L]oad from File</a>
+        <a class="upper-left" href="{{ url_for("load_from_file") }}">[L]oad from File</a>
     </div>
-    {% if file_message %}
-        <p>{{ file_message }}</p>
-    {% endif %}
+    {% if file_message %}<p>{{ file_message }}</p>{% endif %}
 {% endblock %}
-
 {% block content %}
     <script>
         const linkForKey = {
@@ -23,8 +19,8 @@
             's': '{{ url_for('save_to_file') }}',
             'l': '{{ url_for('load_from_file') }}',
         };
-        document.addEventListener('DOMContentLoaded', function () {
-            document.addEventListener('keypress', function (event) {
+        document.addEventListener('DOMContentLoaded', () => {
+            document.addEventListener('keypress', (event) => {
                 const key = event.key.toLowerCase();
                 if (linkForKey[key]) {
                     window.location.href = linkForKey[key];
@@ -34,11 +30,17 @@
     </script>
     <h1>Game Setup</h1>
     <div style="text-align: center">
-        <a href="{{ url_for('browse_scenarios') }}"><button>[P]re-Built Scenarios</button></a>
-        <a href="{{ url_for('blank_scenario') }}"><button onclick="return confirm('Are you sure you want to clear the current game\'s data and start with an empty setup?')">Blank Setup</button></a>
+        <a href="{{ url_for("browse_scenarios") }}">
+            <button>[P]re-Built Scenarios</button>
+        </a>
+        <a href="{{ url_for("blank_scenario") }}">
+            <button onclick="return confirm('Are you sure you want to clear the current game\'s data and start with an empty setup?')">
+                Blank Setup
+            </button>
+        </a>
     </div>
     <div class="entitylist-container" style="margin-bottom: 20px;">
-        <a href="{{ url_for('configure_overall') }}">Overall Settings</a>
+        <a href="{{ url_for("configure_overall") }}">Overall Settings</a>
     </div>
     <style>
         .flexdiv {
@@ -56,7 +58,7 @@
                         {% else %}
                             {{ entity_type|title }}s
                         {% endif %}
-                        <span class="dropdown-icon">&#9662;</span>
+                        <span class="dropdown-icon">▼</span>
                     </button>
                     <div class="popup-frame">
                         <div class="popup-list">
