--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -1,41 +1,55 @@
 {% extends 'base.html' %}
-
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">Overview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
+        <a href="{{ url_for("configure_index") }}">Main Setup Page</a>
     </div>
 {% endblock %}
-
 {% block content %}
     <h1>Character Setup</h1>
-    <p class="info">Participant in the story such as a team member, enemy, or NPC.
-    Typically performs actions of some kind.</p>
+    <p class="info">
+        Participant in the story such as a team member, enemy, or NPC.
+        Typically performs actions of some kind.
+    </p>
     <form method="post">
         <label for="character-name">Name:</label>
-        <input type="text" id="character-name" name="char_name" value="{{ current.name }}" required><br>
+        <input type="text"
+               id="character-name"
+               name="char_name"
+               value="{{ current.name }}"
+               required>
+        <br>
         <label for="character-description">Description:</label>
-        <textarea id="character-description" name="char_description" rows="6" cols="50">{{ current.description }}</textarea><br>
+        <textarea id="character-description" name="char_description" rows="6" cols="50">{{ current.description }}</textarea>
+        <br>
         <!--
         <input type="checkbox" id="masked" name="masked" {% if current.masked %}checked{% endif %}>
         <label for="mask">Don't reveal until met</label><br>
         -->
-        <input type="checkbox" id="top_level" name="top_level" {% if current.toplevel %}checked{% endif %}>
-        <label for="top_level">Show in Overview</label><br>
-
+        <input type="checkbox"
+               id="top_level"
+               name="top_level"
+               {% if current.toplevel %}checked{% endif %}>
+        <label for="top_level">Show in Overview</label>
+        <br>
         <label for="character-location">Location:</label>
         <select id="character-location" name="char_location">
             <option value="" selected>(Nowhere in particular)</option>
             {% for location in game_data.locations %}
-                <option value="{{ location.id }}" {% if current.location.id == location.id %}selected{% endif %}>
-                    {{ location.name }}
-                </option>
+                <option value="{{ location.id }}"
+                        {% if current.location.id == location.id %}selected{% endif %}>{{ location.name }}</option>
             {% endfor %}
-        </select><br>
+        </select>
+        <br>
         <label for="position">Position in Grid:</label>
-        <input type="text" id="position" name="position" value="{{ current.position[0] }},{{ current.position[1] }}" size="5"> <span class="label-like">left, top</span><br>
-
+        <input type="text"
+               id="position"
+               name="position"
+               value="{{ current.position[0] }},{{ current.position[1] }}"
+               size="5">
+        <span class="label-like">left, top</span>
+        <br>
         <div id="attrib-container" class="outer-border">
             <table id="attrib-table" style="display: none;">
                 <thead>
@@ -54,9 +68,7 @@
                     <div class="select-box">
                         <select id="add-attrib-select">
                             <option value="" selected>(Select attribute)</option>
-                            {% for attrib in game_data.attribs %}
-                                <option value="{{ attrib.id }}">{{ attrib.name }}</option>
-                            {% endfor %}
+                            {% for attrib in game_data.attribs %}<option value="{{ attrib.id }}">{{ attrib.name }}</option>{% endfor %}
                         </select>
                         <button type="button" id="add-attrib-btn" class="lesser-button">Add Attribute</button>
                     </div>
@@ -65,7 +77,6 @@
                 {% endif %}
             </div>
         </div>
-
         <div id="items-container" class="outer-border">
             <table id="items-table" style="display: none;">
                 <thead>
@@ -86,9 +97,7 @@
                         <select class="item-select" name="item_select">
                             <option value="" selected>(Select item)</option>
                             {% for item in game_data.items %}
-                                {% if item.id not in current.items %}
-                                    <option value="{{ item.id }}">{{ item.name }}</option>
-                                {% endif %}
+                                {% if item.id not in current.items %}<option value="{{ item.id }}">{{ item.name }}</option>{% endif %}
                             {% endfor %}
                         </select>
                         <button type="button" class="add-item-btn lesser-button">Add Item</button>
@@ -98,17 +107,18 @@
                 {% endif %}
             </div>
         </div>
-
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
             <button type="submit" id="btn-duplicate" name="make_duplicate">Save and Duplicate</button>
             <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Close without Saving</button>
-            <button type="submit" id="btn-delete" name="delete_character" class="dangerous-button">Delete Character</button>
+            <button type="submit"
+                    id="btn-delete"
+                    name="delete_character"
+                    class="dangerous-button">Delete Character</button>
         </div>
     </form>
-
     <script>
-        $(document).ready(function() {
+        $(document).ready(() => {
             {% if current.id > 0 %}
                 $('#btn-delete').removeAttr('disabled');
             {% else %}
@@ -132,7 +142,7 @@
                 $('#items-rows').prepend(itemHtml);
                 $('#items-table').show();
             }
-            $('.add-item-btn').click(function() {
+            $('.add-item-btn').click(() => {
                 const selectBox = $(this).prev('.item-select');
                 const selectedOption = selectBox.find(':selected');
                 const itemId = selectedOption.val();
@@ -140,7 +150,7 @@
                 if (itemId === '') {
                     return; // don't add if the selected option is the placeholder
                 }
-                const existingItem = $('#items-rows input[name="item_id[]"][value="' + itemId + '"]').closest('tr');
+                const existingItem = $(`#items-rows input[name="item_id[]"][value="${itemId}"]`).closest('tr');
                 if (existingItem.length > 0) {
                     alert('Item already exists.');
                     return;
@@ -157,7 +167,7 @@
                     {{ owned_item.quantity | formatNum }},
                     "{{ owned_item.slot }}");
             {% endfor %}
-            $('#items-rows').on('click', '.remove-item-btn', function() {
+            $('#items-rows').on('click', '.remove-item-btn', () => {
                 const itemContainer = $(this).closest('tr');
                 itemContainer.remove();
             });
@@ -177,14 +187,14 @@
                 $('#attrib-rows').prepend(attribHtml);
                 $('#attrib-table').show();
             }
-            $('#add-attrib-btn').click(function() {
+            $('#add-attrib-btn').click(() => {
                 const selectedOption = $('#add-attrib-select option:selected');
                 const attribId = selectedOption.val();
                 const attribName = selectedOption.text();
-                if (attribId == "") {
+                if (attribId === "") {
                     return; // don't add if the selected option is the placeholder
                 }
-                const existingAttrib = $('#attrib-rows input[name="attrib_id[]"][value="' + attribId + '"]').closest('tr');
+                const existingAttrib = $(`#attrib-rows input[name="attrib_id[]"][value="${attribId}"]`).closest('tr');
                 if (existingAttrib.length > 0) {
                     alert('Attribute already exists.');
                     return;
@@ -198,7 +208,7 @@
                     "{{ attrib_of.attrib.name }}",
                     {{ attrib_of.val | formatNum }});
             {% endfor %}
-            $('#attrib-container').on('click', '.remove-attrib-btn', function() {
+            $('#attrib-container').on('click', '.remove-attrib-btn', () => {
                 const attribRow = $(this).closest('tr');
                 attribRow.remove();
                 if ($('#attrib-rows').children().length === 0) {
