--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -1,34 +1,65 @@
 {% extends 'base.html' %}
-
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">Overview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
+        <a href="{{ url_for("configure_index") }}">Main Setup Page</a>
     </div>
 {% endblock %}
-
 {% block content %}
     <h1>Location Setup</h1>
     <form method="post">
-    <p class="info">Room, area, or container where items and characters can be. It takes 3 seconds to travel 1 unit of distance between locations. May be subdivided into a grid.</p>
+        <p class="info">
+            Room, area, or container where items and characters can be. It takes 3 seconds to travel 1 unit of distance between locations. May be subdivided into a grid.
+        </p>
         <label for="location-name">Name:</label>
-        <input type="text" id="location-name" name="location_name" value="{{ current.name }}" required><br>
+        <input type="text"
+               id="location-name"
+               name="location_name"
+               value="{{ current.name }}"
+               required>
+        <br>
         <label for="location-description">Description:</label>
-        <textarea id="location-description" name="location_description" rows="6" cols="50">{{ current.description }}</textarea><br>
-        <input type="checkbox" id="masked" name="masked" {% if current.masked %}checked{% endif %}>
-        <label for="mask">Don't reveal until visited</label><br>
-        <input type="checkbox" id="top_level" name="top_level" {% if current.toplevel %}checked{% endif %}>
-        <label for="top_level">Show in Overview</label> <span class="label-like">&ndash; useful if characters do not go here</span><br>
+        <textarea id="location-description"
+                  name="location_description"
+                  rows="6"
+                  cols="50">{{ current.description }}</textarea>
+        <br>
+        <input type="checkbox"
+               id="masked"
+               name="masked"
+               {% if current.masked %}checked{% endif %}>
+        <label for="mask">Don't reveal until visited</label>
+        <br>
+        <input type="checkbox"
+               id="top_level"
+               name="top_level"
+               {% if current.toplevel %}checked{% endif %}>
+        <label for="top_level">Show in Overview</label>
+        <span class="label-like">– useful if characters do not go here</span>
+        <br>
         <label for="dimensions">Grid Dimensions:</label>
-        <input type="text" id="dimensions" name="dimensions" value="{{ current.grid.dimensions[0] }}x{{ current.grid.dimensions[1] }}" size="5"> <span class="label-like">width x height</span><br>
+        <input type="text"
+               id="dimensions"
+               name="dimensions"
+               value="{{ current.grid.dimensions[0] }}x{{ current.grid.dimensions[1] }}"
+               size="5">
+        <span class="label-like">width x height</span>
+        <br>
         <label for="excluded-left-top">Exclude from Grid:</label>
-        <input type="text" id="excluded-left-top" name="excluded_left_top" 
-               value="{{ current.grid.excluded[:2] }}" size="5">
-        <label for="excluded-right-bottom"> to </label>
-        <input type="text" id="excluded-right-bottom" name="excluded_right_bottom" 
-               value="{{ current.grid.excluded[2:] }}" size="5">
-        <span class="label-like">left,top to right,bottom</span><br>
+        <input type="text"
+               id="excluded-left-top"
+               name="excluded_left_top"
+               value="{{ current.grid.excluded[:2] }}"
+               size="5">
+        <label for="excluded-right-bottom">to</label>
+        <input type="text"
+               id="excluded-right-bottom"
+               name="excluded_right_bottom"
+               value="{{ current.grid.excluded[2:] }}"
+               size="5">
+        <span class="label-like">left,top to right,bottom</span>
+        <br>
         <div id="destinations-container" class="outer-border">
             <div>
                 {% set outerscope = namespace(has_other_location = false) %}
@@ -40,11 +71,11 @@
                 {% if outerscope.has_other_location %}
                     <!-- Select box for adding another destination -->
                     <script>
-                        $(document).ready(function() {
+                        $(document).ready(() => {
                             // Enable or disable the distance fields based on the selected destination
-                            $('#dest-select').change(function() {
-                                var selectedOption = $(this).find(':selected');
-                                var isDestinationSelected = (selectedOption.val() !== '');
+                            $('#dest-select').change(() => {
+                                const selectedOption = $(this).find(':selected');
+                                const isDestinationSelected = (selectedOption.val() !== '');
                                 $('.distance-field').prop('disabled', !isDestinationSelected);
                             });
                         });
@@ -53,9 +84,7 @@
                         <select id="dest-select">
                             <option value="" selected>(Select location)</option>
                             {% for location in game_data.locations %}
-                                {% if location.id != current.id %}
-                                <option value="{{ location.id }}">{{ location.name }}</option>
-                                {% endif %}
+                                {% if location.id != current.id %}<option value="{{ location.id }}">{{ location.name }}</option>{% endif %}
                             {% endfor %}
                         </select>
                         <button type="button" id="add-dest-btn" class="lesser-button">Add Destination</button>
@@ -65,7 +94,6 @@
                 {% endif %}
             </div>
         </div>
-
         <div id="items-container" class="outer-border">
             <table id="items-table" style="display: none;">
                 <thead>
@@ -86,9 +114,7 @@
                         <select class="item-select">
                             <option value="" selected>(Select item)</option>
                             {% for item in game_data.items %}
-                                {% if item.id not in current.items %}
-                                    <option value="{{ item.id }}">{{ item.name }}</option>
-                                {% endif %}
+                                {% if item.id not in current.items %}<option value="{{ item.id }}">{{ item.name }}</option>{% endif %}
                             {% endfor %}
                         </select>
                         <button type="button" class="add-item-btn lesser-button">Add Item</button>
@@ -98,16 +124,18 @@
                 {% endif %}
             </div>
         </div>
-
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
             <button type="submit" id="btn-duplicate" name="make_duplicate">Save and Duplicate</button>
             <button type="submit" id="btn-cancel" name="cancel_changes" formnovalidate>Close without Saving</button>
-            <button type="submit" id="btn-delete" name="delete_location" class="dangerous-button">Delete Location</button>
+            <button type="submit"
+                    id="btn-delete"
+                    name="delete_location"
+                    class="dangerous-button">Delete Location</button>
         </div>
     </form>
     <script>
-        $(document).ready(function() {
+        $(document).ready(() => {
             {% if current.id > 0 %}
                 $('#btn-delete').removeAttr('disabled');
             {% else %}
@@ -135,20 +163,21 @@
                 `;
                 $('#destinations-container').prepend(destHtml);
             }
-            $('#add-dest-btn').click(function() {
+            $('#add-dest-btn').click(() => {
                 const selectedOption = $('#dest-select option:selected');
                 const destId = selectedOption.val();
                 const destName = selectedOption.text();
-                if (destId == "") {
+                if (destId === "") {
                     return; // don't add if the selected option is the placeholder
                 }
                 let destExists = false;
-                $('.destination').each(function() {
-                    const existingId = $(this).find('input[name="dest_id[]"]').val();
+                $('.destination').each((index, element) => {
+                    const existingId = $(element).find('input[name="dest_id[]"]').val();
                     if (existingId === destId) {
                         destExists = true;
                         return false; // exit the each loop
                     }
+                    return true; // continue
                 });
                 if (destExists) {
                     alert('Destination already exists.');
@@ -166,7 +195,7 @@
                     );
             {% endfor %}
 
-            $('#destinations-container').on('click', '.remove-dest-btn', function() {
+            $('#destinations-container').on('click', '.remove-dest-btn', () => {
                 const destContainer = $(this).closest('.destination');
                 destContainer.remove();
             });
@@ -188,7 +217,7 @@
                 $('#items-rows').prepend(itemHtml);
                 $('#items-table').show();
             }
-            $('.add-item-btn').click(function() {
+            $('.add-item-btn').click(() => {
                 const selectBox = $(this).prev('.item-select');
                 const selectedOption = selectBox.find(':selected');
                 const itemId = selectedOption.val();
@@ -196,7 +225,7 @@
                 if (itemId === '') {
                     return; // don't add if the selected option is the placeholder
                 }
-                const existingItem = $('#items-rows input[name="item_id[]"][value="' + itemId + '"]').closest('tr');
+                const existingItem = $(`#items-rows input[name="item_id[]"][value="${itemId}"]`).closest('tr');
                 if (existingItem.length > 0) {
                     alert('Item already exists.');
                     return;
@@ -212,7 +241,7 @@
                     {{ item_at.quantity | formatNum }},
                     "{{ item_at.position[0] }},{{ item_at.position[1] }}");
             {% endfor %}
-            $('#items-rows').on('click', '.remove-item-btn', function() {
+            $('#items-rows').on('click', '.remove-item-btn', () => {
                 const itemContainer = $(this).closest('tr');
                 itemContainer.remove();
             });
