--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
-
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">Continue Game</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">Continue Game</a>
         <span class="separator">|</span>
-        <a href="{{ url_for('configure_index') }}">Setup</a>
+        <a href="{{ url_for("configure_index") }}">Setup</a>
     </div>
 {% endblock %}
-
 {% block content %}
     <h2>{{ message }}</h2>
     <div class="label-like">{{ details }}</div>
