--- a/app/templates/session/users.html
+++ b/app/templates/session/users.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %}
-
 {% block upper_left %}
     <div class="nav-container">
-        <a class="upper-left" href="{{ url_for('overview') }}">[O]verview</a>
+        <a class="upper-left" href="{{ url_for("overview") }}">[O]verview</a>
         <span class="separator">|</span>
-        <a href="{{ url_for('configure_index') }}">[M]ain Setup</a>
+        <a href="{{ url_for("configure_index") }}">[M]ain Setup</a>
     </div>
 {% endblock %}
-
 {% block content %}
     <script>
         const linkForKey = {
             'o': '{{ url_for('overview') }}',
             'm': '{{ url_for('configure_index') }}',
         };
-        document.addEventListener('DOMContentLoaded', function () {
-            document.addEventListener('keypress', function (event) {
+        document.addEventListener('DOMContentLoaded', () => {
+            document.addEventListener('keypress', (event) => {
                 const key = event.key.toLowerCase();
                 if (linkForKey[key]) {
                     window.location.href = linkForKey[key];
@@ -28,26 +26,28 @@
     {% if count > 1 %}
         <p class="info">{{ count }} players have joined your current game.</p>
     {% else %}
-        <p class="info">There are no other players in your current game. To invite others, send them the <a href="{{ url_for('get_session_link') }}">session link</a>.</p>
+        <p class="info">
+            There are no other players in your current game. To invite others, send them the <a href="{{ url_for("get_session_link") }}">session link</a>.
+        </p>
     {% endif %}
     {% if interactions %}
-    <table class="spacious">
-        <tr>
-            <th>User ID</th>
-            <th>Last Interaction</th>
-            <th>Page<th>
-        </tr>
-        {% for interaction in interactions %}
+        <table class="spacious">
             <tr>
-                <td{% if interaction.username == current_username %} class="username"{% endif %}>{{ interaction.username }}</td>
-                <td>{{ interaction.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                <td>
-                    {{ interaction.action_display() }}
-                    <!--link: {{ interaction.action_link }}-->
-                </td>
-            </td></tr>
-        {% endfor %}
-    </table>
+                <th>User ID</th>
+                <th>Last Interaction</th>
+                <th>Page</th>
+            </tr>
+            {% for interaction in interactions %}
+                <tr>
+                    <td {% if interaction.username == current_username %}class="username"{% endif %}>{{ interaction.username }}</td>
+                    <td>{{ interaction.timestamp.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+                    <td>
+                        {{ interaction.action_display() }}
+                        <!--link: {{ interaction.action_link }}-->
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
     {% else %}
     {% endif %}
 {% endblock %}
